SERVER-9856 check in-progress indexes for duplicates in prepareToBuildIndex()